--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,28 +9,49 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logomd"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logomd"
         android:supportsRtl="true"
         android:theme="@style/Theme.JavaJourney"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ui.category.CategoryReligionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.category.CategoryTamanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.OnBoardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.category.CategoryBudayaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.category.CategoryBahariActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.category.CategoryAlamActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.home.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.starter.starter_Activity"
             android:exported="false" />
         <activity
             android:name=".ui.detail.DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.starter.starter_Activity"
-            android:exported="true">
+            android:name=".ui.SplashScreenActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity"></activity>
+        <activity android:name=".ui.MainActivity" />
     </application>
 
 </manifest>
